task320/src/main/java/com/example/task320/error/NotFoundException.java
package com.example.task320.error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String msg) { super(msg); }
}
